# cutil

./: CMakeLists.txt  README.md  array.c  array.h  bitmap.c  bitmap.h  cutil.c  cutil.h  cutypes.h  endian.c  endian.h  heap.c  heap.h  list.c  list.h  string.c  string.h  struct.c  struct.h  test.c  va_list.h
arch/: AArch64.S  ARMv7.S  SuperH4.S  x86_64.S
